Fixing Chemistry Dark Mode

--- a/main1.css
+++ b/main1.css
@@ -158,7 +158,7 @@ section {
     top: 0;
     left: 0;
     width: 100%;
-    height: 210vh;
+    height: 240vh;
     box-sizing: border-box;
     padding: 75px;
     transition: 0s;
